TestSuite/errors/err0290.pas
type A = auto sealed auto class
end;

begin
end.